[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.28.0"
requests-toolbelt = "^0.9.1"
pystyle = "^2.0"
pycryptodome = "^3.14.1"
pyflakes = "^2.4.0"
licensing = "^0.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"